--- a/css/agency.css
+++ b/css/agency.css
@@ -40,9 +40,9 @@ h6 {
 }
 
 .page-section h2.section-heading {
-  font-size: 40px;
-  margin-top: 0;
-  margin-bottom: 15px;
+  font-size: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .page-section h3.section-subheading {
